--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "wavesurfer.js": "^7.12.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
